Add Expressive Code TwoSlash documentation and Spectre Dark theme
- Created a new documentation file for Expressive Code TwoSlash, detailing its purpose and usage with TypeScript.
- Added an example TypeScript code snippet demonstrating the functionality of TwoSlash.
- Introduced a new dark theme, Spectre Dark, based on GitHub Dark, with customized color settings for various UI elements.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.gotoLocation.multipleDefinitions": "goto",
   "cSpell.words": [
-    "pagefind"
+    "pagefind",
+    "twoslash"
   ]
 }
