--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@iconify/utils": "^2.2.1",
     "@shikijs/themes": "^1.26.1",
     "astro": "^5.11.0",
-    "astro-expressive-code": "^0.38.3",
-    "sharp": "^0.33.5"
+    "astro-expressive-code": "^0.41.3",
+    "expressive-code-twoslash": "^0.5.3",
+    "sharp": "^0.33.5",
+    "typescript": "^5.8.3",
+    "@types/node": "^24.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
